Lots of slideshow fixes, adding real buttons for navigation instead of the lame text links you couldn't understand.  The height sizing is dynamic now, which gives a little bit of a jump when you first load, but it sizes everything much better than the static sizes.  And random cleanups on invite.jsp

--- a/dumbhippo/trunk/server/web/css/account-iefixes.css
+++ b/dumbhippo/trunk/server/web/css/account-iefixes.css
@@ -1,5 +1,1 @@
 @import "slideshow-iefixes.css";
-
-.dh-right-box {
-	width:			15em;
-}
